Closed
Bug 85231
Opened 24 years ago
Closed 24 years ago
Crashes on exit M092 [@ NQD - nsActivePluginList::stopRunning]
Categories
(Core Graveyard :: Plug-ins, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.3
People
(Reporter: namachi, Assigned: bnesse)
References
()
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(2 files)
825 bytes,
patch
|
Details | Diff | Splinter Review | |
763 bytes,
patch
|
Details | Diff | Splinter Review |
Early Talkback results from M091 milestone release
This is topmost topcrash bug report for Mac OS.
Stack Trace:
NQD + 0x1a334 (0x3f8b6fb4)
InterfaceLib + 0x10c10 (0xffd4e540)
NQD + 0x1a2c4 (0x3f8b6f44)
InterfaceLib + 0x10bc0 (0xffd4e4f0)
MRJPlugin + 0x5f84 (0x3df641f4)
MRJPlugin + 0x5d18 (0x3df63f88)
MRJPlugin + 0x1ffc (0x3df6026c)
nsActivePluginList::stopRunning() [nsPluginHostImpl.cpp line 472]
nsPluginHostImpl::Destroy() [nsPluginHostImpl.cpp line 2586]
nsPluginHostImpl::Observe() [nsPluginHostImpl.cpp line 4645]
nsObserverService::Notify() [nsObserverService.cpp line 236]
CODE.10
XPTC_InvokeByIndex() [xptcinvoke_mac.cpp line 129]
XPCWrappedNative::CallMethod() [xpcwrappednative.cpp line 1834]
(31564655) Comments: I was quiting Mozilla.
(31562443) Comments: quiting program while itunes was streaming audio
(31561685) Comments: Trying to quit mozilla after a "Java.lang null pointer
exception"
(31560952) Comments: Quitting
(31560198) Comments: Quitting the application
(31559783) Comments: quitting the program
(31554209) Comments: Closed Window
(31553601) Comments: Just quit Mozilla and bang the error.
(31548817) Comments: Quit with Apple+Q.
(31546641) Comments: quiting
(31546591) Comments: I was just going out of the mail!! There seems to be a
real problem with deleting items
(31543789) Comments: I forgot to close Mozilla when I started IE 5 up; my
Mac indicated
(31543352) Comments: command q keyboard quit
(31540906) Comments: Quitting program
(31540857) Comments: I just chose to quit the browser and got error 2
(31540204) URL: www.kairo.at
(31540204) Comments: typing the url
(31539069) Comments: quiting program
(31528912) Comments: I was quiting Mozilla.
(31525781) Comments: quitting Mozilla
(31523555) URL: www.microsoft.com
(31523555) Comments: i clicked on a link to .net
(31518532) Comments: Closing the browser with Command-Q.
(31517895) URL: http://www.macsurfer.com
(31517895) Comments: Crash on quit after several hours of surfing and
viewing large quicktime movies.
(31514933) Comments: Quitting browser
(31511248) Comments: tried to quit mozilla 0.9.1
(31508325) Comments: Any url I attempted to load would just time out
(Netscape 4.x on the same system had to problem at the time loading these same
urls). I Quit the application and I ended up here.
(31507963) Comments: I was in Messanger & tried to quit. This problem
appears to be reoccurring from .9.0I will probably check bugzilla & log it
(31506621) Comments: Quitting the application
(31500561) Comments: quit
(31498737) URL: http://www.nascar.com
(31498737) Comments: Using Java app "Racecast" at nascar.com
(31497941) Comments: Quite Mozilla with Apple+Q
(31497929) Comments: quiting program after viewing a quicktime movie on
cnn.com
(31495867) Comments: Quitting after downloading a file.
(31495602) Comments: command quit from yahoo java window
(31492839) Comments: quiting Mozilla
(31491885) Comments: trying to play yahoo pinochle
(31490012) Comments: quitting
(31489459) Comments: I was quitting the application.
(31488883) Comments: quitting
(31486834) Comments: quit application after running buster
(31486698) Comments: I was quiting Mozilla.
(31481668) Comments: Exiting Mozilla. Had attempted to install Macromedia
Flash 5 plugin and experienced a similar crash-on-exit. (Macintosh Type 2
error). Flash sites displayed *no content*. Sent QFA on that. Then restarted
system and went back into Mozilla
(31481668) Comments: to Flash sites. This time
(31480951) Comments: Exiting browser after attempting to install Macromedia
Flash 5 plugin to Mozilla build *and* going to a few Flash 5 sites (without
having first restarted browser).
(31479994) URL: http://initiation.gel.ulaval.ca/
(31477787) Comments: quitting Mozilla on Mac OS 9.1
(31470269) Comments: quiting mozilla application
Reporter | ||
Updated•24 years ago
|
Comment 3•24 years ago
|
||
What's the latest status on this bug?
Comment 4•24 years ago
|
||
Updating summary with M092, since this is a topcrasher for Mozilla 0.9.2. It
looks like the same issue, some sort of crash on exit. Here is some Talkback data:
NQD 110
85231 NEW peterlubczynski@netscape.com ---
53391 RESO WORK talkback@netscape.com ---
First BBID :32349265
Last BBID :32417611
Min Runtime :146
Max Runtime :51701
First Appearance Date : 2001-06-29
Last Appearance Date : 2001-07-02
First BuildID : 2001062823
Last BuildID : 2001062823
Stack Trace:
NQD + 0x1a334 (0x004afe84)
InterfaceLib + 0x1e684 (0xffd1b3a4)
NQD + 0x1a2c4 (0x004afe14)
InterfaceLib + 0x1e638 (0xffd1b358)
MRJPlugin + 0x5f84 (0x14d2c404)
MRJPlugin + 0x5d18 (0x14d2c198)
MRJPlugin + 0x1ffc (0x14d2847c)
nsActivePluginList::stopRunning()
[nsPluginHostImpl.cpp line 513]
nsPluginHostImpl::Destroy()
[nsPluginHostImpl.cpp line 2728]
nsPluginHostImpl::Observe()
[nsPluginHostImpl.cpp line 4872]
nsObserverService::Notify()
[nsObserverService.cpp line 236]
CODE.10
XPTC_InvokeByIndex()
[xptcinvoke_mac.cpp line 129]
XPCWrappedNative::CallMethod()
[xpcwrappednative.cpp line 1880] (32417611) Comments: I was quitting.
(32416639) Comments: opened help files in <preferences>...sytem locked...tried 3 times
in a row after 3 restarts.
(32414044) URL: http://slashdot.org/articles/01/06/30/1219224.shtml
(32414044)
Comments: quitting
(32409431) Comments: Quitting the application from the file menu
(32403469) URL: www.askjeeves.com/
(32403469)
Comments: first
(32401752) Comments: quiting. it worked fine for a long time through several plugins
(32399837) Comments: Ran some java from an online-trading-site.
(32394316) Comments: The installer of other program try to close all applications to
install a new plugin (MacOS 9.1
(32393275) Comments: Quiting
(32393001) Comments: After browsing for a while
(32391988) Comments: I used the keyboard command Apple-Q to quit Mozilla
(32391431) Comments: shutting down computer
(32390946) Comments: Cmd-Q
(32389754) Comments: Command-Q and this came up.
(32388891) Comments: quitting the app...gave my g3 powerbook a freez of about 10
secondsbtw. sometimes scrolling works
(32384855) Comments: shutting down computer
(32382578) Comments: Partition Magic demo
(32381893) Comments: Quitting browser
(32381192) Comments: quitting the browser
(32380026) Comments: i was screwing with my mail prefs to figure out why I can't check
my mail with this build. lame. on the up side
(32380026) Comments: nice work. keep it up.
(32379675) URL: commerce.vw.com
(32379605) Comments: Clicked on radio station on Excite.Told me I needed a
plugin.Mozilla took me to Netscape's site
(32379459) Comments: command-Q to quit. not a failure...
(32377689) Comments: Cmd-Q
(32376609) Comments: quitting communicator - i was frustrated by the inability to add
bookmarks to the tool bar
(32376023) Comments: quiting the browser
(32374807) Comments: command-q
(32372467) Comments: Exiting program
(32372336) Comments: pressed command-q keystroke combination (wanted to quit)
(32372023) Comments: quitting browser
(32371845) URL: http://www.heise.de
(32371845)
Comments: I quit Mozilla
(32369497) Comments: shutting the program down normally
(32368583) Comments: Pressed Command-Q to quit the browser.
(32368563) Comments: tried java application
(32367537) Comments: Closed Mozilla after viewing a photo and returning to the original
web page.
(32356790) Comments: more than 320 MB's of RAM so it couldn't be the memory
(32355775) URL: www.postbank.de
(32355775)
Comments: I quit the browser
(32352112) Comments: quitting the browser using the Command-Q shortcut.
(32351721) URL: games.yahoo.com
(32351721) Comments: trying to load up the single player slider game- (java)It didn't work
(32349692) Comments: exiting - had just closed the only open browser window - and
selected quit from application menu - during the session I had selected to
apply the modern theme and visited a site with a java applet.
(32349675) Comments: I hit open-Apple q to quit the program
I don't know if using command-q to quit might be the problem or not, since a lot
of the comments also mention using the file menu to quit. Seeing that this has
been a major topcrash for the last 2 mozilla milestones, has anyone had a chance
to work on this lately?
A fix to crashes like this will do wonders for the Mac MTBF. Any plans to get
this fixed for RTM?
Summary: Crashes on exit M091 [@ NQD - nsActivePluginList::stopRunning] → Crashes on exit M092 [@ NQD - nsActivePluginList::stopRunning]
Comment 5•24 years ago
|
||
Thanks for the solid info, I will take a closer look.
However, I don't think this will effect MTBF much since almost all reports are
at shutdown.
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla0.9.3
Comment 6•24 years ago
|
||
Nominating nsbrach.
First, to reproduce on Mac:
1) Visit http://www.javasoft.com
2) Go to any other page
3) Quit
The crash happens on shutdown because the stop bit isn't set for the plugin and
therefore we think it's still running and try to shut it down, AGAIN, which
causes the crash. So, why isn't the stop bit set? This is done in
~nsPluginInstanceOwner but that destructor is never called. This is because it's
refcount doesn't go to zero when the frame goes away.
Keywords: nsBranch
Comments from Peter via email:
Seems that there is a memory leak when leaving a page with Java (or possibly
other XPCOM plugins) on Mac which later causes this crash on Shutdown. I have
observed the problem as being that nsPluginInstanceOwner refcount does not go to
zero and it's destructor doesn't get called. I set a breakpoint in ADDREF but
wasn't able to determine which object was holding the extra ref. I think the
next step is running the XPCOM mem leak log
-- end pasted comments --
Peter has asked for help on this bug. I will email a few people for help.
Assignee | ||
Comment 9•24 years ago
|
||
The timer to pass idle events to the plugin is being leaked... still
investigating why.
Comment 10•24 years ago
|
||
See bug 56659 about the leaking timer.
Comment 11•24 years ago
|
||
should this bug go over to bnesse while he looks for the leak?
Comment 12•24 years ago
|
||
talked to bnesse. he is all over this one... ;-)
Assignee: peterlubczynski → bnesse
Status: ASSIGNED → NEW
Assignee | ||
Comment 13•24 years ago
|
||
*** Bug 56659 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 14•24 years ago
|
||
Assignee | ||
Updated•24 years ago
|
Whiteboard: [PDT+] NO ETA → [PDT+] [Fix in hand] [need r, sr, approval]
Comment 15•24 years ago
|
||
We should probably do the same thing in nsPluginViewer to cover the full-page
case.
Assignee | ||
Comment 16•24 years ago
|
||
Comment 17•24 years ago
|
||
This stops the crash and the leak? Way to go Brian! r=peterl
Comment 18•24 years ago
|
||
r=av for both patches.
Assignee | ||
Updated•24 years ago
|
Whiteboard: [PDT+] [Fix in hand] [need r, sr, approval] → [PDT+] [need sr]
Comment 19•24 years ago
|
||
Looks good to me, though if I had written it, I would have used |0| instead of
|nsnull|. This is a matter of taste, though, so I won't make you change it.
sr=scc on both patches.
Assignee | ||
Updated•24 years ago
|
Whiteboard: [PDT+] [need sr] → [PDT+] [waiting for tree to open]
Assignee | ||
Comment 20•24 years ago
|
||
Checked in on trunk.
Whiteboard: [PDT+] [waiting for tree to open] → [PDT+]
Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [PDT+] → [PDT+][FIXED ON TRUNK]
Comment 21•24 years ago
|
||
This might have fixed blocker bug 89488. Linux trunk seems to be working with
Java plugin and multiple profiles.
Comment 22•24 years ago
|
||
ready for the branch?
Assignee | ||
Comment 23•24 years ago
|
||
Yeah, when I went to check in yesteday, I discovered that the tree that I
thought was a branch tree actually wasn't. I'm repulling and then I have to
re-add the patch. :(
Assignee | ||
Comment 24•24 years ago
|
||
Checked in on branch.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: [PDT+][FIXED ON TRUNK]
Comment 25•24 years ago
|
||
tried on today's mac branc h0718 and did not see a crash after quitting browser
after viewing the javasoft page. Verif..and adding'vtrunk' keywd to verify on
trunk later.
Status: RESOLVED → VERIFIED
Keywords: vtrunk
Comment 26•24 years ago
|
||
verif on mac 0802 trunk. no crash seen...removing 'vtrunk' keywd.
Keywords: vtrunk
Comment 27•24 years ago
|
||
*** Bug 93944 has been marked as a duplicate of this bug. ***
Updated•14 years ago
|
Crash Signature: [@ NQD - nsActivePluginList::stopRunning]
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•