Fix for bug 85231. Free nsTimer in PluginInstance to eliminate MLK and crash caused by it. r=av, peterl. sr=scc.