modules/plugin/nglsrc/nsPluginViewer.cpp
@@ -915,7 +915,7 @@ pluginInstanceOwner :: ~pluginInstanceOwner()
 {
   // shut off the timer.
   if (mPluginTimer != nsnull) {
-    mPluginTimer->Cancel();
+    CancelTimer();
   }
 
   if (nsnull != mInstance)
@@ -1254,6 +1254,7 @@ void pluginInstanceOwner::CancelTimer()
 {
     if (mPluginTimer) {
         mPluginTimer->Cancel();
+        mPluginTimer = nsnull;
     }
 }
 
